Update db and user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=SWAlab13
+
+spring.config.import=optional:file:.env[.properties]
+spring.datasource.url=${DB_URL}
+spring.datasource.driver-class-name=org.sqlite.JDBC 
+spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDialect
+
