--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,7 @@ spring.config.import=optional:file:.env[.properties]
 spring.datasource.url=${DB_URL}
 spring.datasource.driver-class-name=org.sqlite.JDBC 
 spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDialect
+server.servlet.session.timeout=10m  
+server.servlet.session.cookie.secure=true  
+server.servlet.session.cookie.http-only=true  
 
