New branch created, still working on login page

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.2'
-	id 'io.spring.dependency-management' version '1.1.7'
+	id 'io.spring.dependency-management' version '1.1.6'
 }
 
 group = 'com.example'
@@ -24,18 +24,33 @@ repositories {
 }
 
 dependencies {
+
+	// Spring Boot starters 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implemantation 'org.springframework.boot:spring-boot
+    
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	
+	// Flyway (for database migration)
 	implementation 'org.flywaydb:flyway-core'
-	implementation 'org.xerial:sqlite-jdbc:3.47.1.0' 
-	implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
+	
+	// Database
+	
+	implementation("org.xerial:sqlite-jdbc:3.32.3.2")
 	implementation 'org.hibernate.orm:hibernate-community-dialects:6.6.3.Final'
+
+	
+	// Lombook 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	
+	
+	// Testing
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'org.junit.jupiter:junit-jupiter-api'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     testImplementation 'org.mockito:mockito-core'
