--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,20 @@
 spring.application.name=SWAlab13
 
 spring.config.import=optional:file:.env[.properties]
-spring.datasource.url=${DB_URL}
-spring.datasource.driver-class-name=org.sqlite.JDBC 
-spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDialect
-server.servlet.session.timeout=10m  
+
+server.servlet.session.timeout=10m
 server.servlet.session.cookie.secure=true  
 server.servlet.session.cookie.http-only=true  
+
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url = jdbc:sqlite:mydb.sqlite
+spring.datasource.driver-class-name = org.sqlite.JDBC
+
+
+
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
+
 
